--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -113,6 +113,18 @@
     margin: 0 auto;
   }
 
+  @media (max-width: 1024px) {
+    .mission-vision-grid {
+      grid-template-columns: 1fr;
+      gap: 40px;
+    }
+
+    .mission-card,
+    .vision-card {
+      text-align: center;
+    }
+  }
+
   .mission-card,
   .vision-card {
     background: transparent;
@@ -286,9 +298,7 @@
       max-width: 95%;
       font-size: 2.3rem;
     }
-  }
 
-  @media (max-width: 500px) {
     .vision-image,
     .mission-image {
       display: none;
