--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -178,7 +178,7 @@
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 500px) {
   .nav__bar {
     margin-left: 24px; /* Increased from 10px to 24px */
     margin-right: 24px; /* Increased from 10px to 24px */
@@ -192,6 +192,13 @@
   .logo__icon {
     width: 80px; /* Smaller on very small screens */
     height: 40px;
+  }
+}
+
+@media (max-width: 400px) {
+  .logo__icon {
+    width: 120px; /* Increased size for very small screens */
+    height: 60px;
   }
 }
   
