--- a/src/styles/_technology.scss
+++ b/src/styles/_technology.scss
@@ -165,6 +165,32 @@
     text-align: left;
   }
 
+  .challenge-list {
+    color: #555555;
+    line-height: 1.6;
+    margin: 20px 0;
+    font-size: 18px;
+    font-weight: 300;
+    text-align: left;
+    padding-left: 20px;
+    list-style: none;
+  }
+
+  .challenge-list li::before {
+    content: "- ";
+    color: #555555;
+    font-weight: 400;
+    margin-right: 8px;
+  }
+
+  .challenge-list li {
+    margin-bottom: 12px;
+    color: #555555;
+    line-height: 1.6;
+    font-size: 18px;
+    font-weight: 300;
+  }
+
   .main-content-wrapper {
     background: rgba(0, 126, 164, 1.05);
     background: linear-gradient(50deg, rgba(0, 126, 164, 0.1) 0%, rgba(0, 126, 164, 0.05) 100%);
